--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-//    id 'kotlin-android-extensions'  //findViewById으로 인한 불편함을 지우기 위해 사용한 plugin android에서 퇴출당함
+    id 'kotlin-android-extensions'  //findViewById으로 인한 불편함을 지우기 위해 사용한 plugin android에서 퇴출당함 but kotlinx를 사용하기 위해 pulgin
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -28,12 +28,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    viewBinding {
+        enabled = true
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
 
 dependencies {
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'  //retrofit origin version: 2.6.3
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //retrofit gson converter origin version: 2.6.3
     implementation "org.jetbrains.anko:anko-common:0.10.8"  //kotlin DSL origin version: 0.10.0
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
